src/test/minic/success/test36.block
test36 {
   // No error: initializing an integer array type variable with a dynamically created array
   int p[] = new int[2];
   p[0] = 3;
}