src/test/minic/error/test35.block
test35 {
   // Type error: initialization of an integer array type variable with a dynamically created array
   int p[] = new int[2];
   boolean a = p[0];
}